--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,13 @@ spring.datasource.username=enterprisedb
 spring.datasource.password=Motdepasse
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=400MB
 
 #spring.jpa.properties.hibernate.generate_statistics=true
 
